--- a/.github/workflows/pytest-unit-test.yaml
+++ b/.github/workflows/pytest-unit-test.yaml
@@ -37,5 +37,5 @@ jobs:
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        cp pythonpp/pythonpp.py benchmarks/tests/pythonpp.py
+        cp sealion/sealion.py benchmarks/tests/sealion.py
         pytest
