--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -19,13 +19,13 @@ jobs:
       run: echo "$GITHUB_CONTEXT" 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        python3 -m pip3 install --upgrade pip
+        pip3 install setuptools wheel twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         echo Running in $PWD
-        python setup.py ${{ github.ref }} sdist bdist_wheel
+        python3 setup.py ${{ github.ref }} sdist bdist_wheel
         twine upload dist/*
