--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,13 @@ project_urls =
     Source Code = https://github.com/anish-lakkapragada/SeaLion
 license = MIT
 classifier =
-    Development Status :: 3 - Alpha
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+        
 keywords =
     Machine Learning, Data Science, Python
