--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long-description-content-type = text/markdown
 requires-python = >=3
 project_urls =
     Source Code = https://github.com/anish-lakkapragada/SeaLion
-license = MIT
+license = Apache
 classifier =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
